Add Enhanced Input

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Map1.Map1
 EditorStartupMap=/Game/Maps/Map1.Map1
-GlobalDefaultGameMode=/Script/ProjectCJH.JHGameMode
+GlobalDefaultGameMode=/Game/BP_JHGameMode.BP_JHGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -270,3 +270,4 @@ LogChaos=VeryVerbose off
 LogRenderer=VeryVerbose off
 LogShaderCompilers=VeryVerbose off
 LogNanite=VeryVerbose off
+
