Add Character Stat Component

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/Map1.Map1
 EditorStartupMap=/Game/Maps/Map1.Map1
 GlobalDefaultGameMode=/Game/BP_JHGameMode.BP_JHGameMode_C
+GameInstanceClass=/Script/ProjectCJH.JHGameInstance
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
