Feat set project to generate nav dynamically

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -343,3 +343,6 @@ LogNanite=VeryVerbose off
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
