--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -256,21 +256,11 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [Core.Log]
-LogEditor=VeryVerbose off
-LogLiveCoding=VeryVerbose off
-LogBlueprintReinstancer=VeryVerbose off
-LogEOSSDK=VeryVerbose off
-LogOnline=VeryVerbose off
-LogOnlineGame=VeryVerbose off
-LogSteamworks=VeryVerbose off
-LogAudio=VeryVerbose off
-LogSound=VeryVerbose off
-LogVoice=VeryVerbose off
-LogPhysics=VeryVerbose off
-LogChaos=VeryVerbose off
-LogRenderer=VeryVerbose off
-LogShaderCompilers=VeryVerbose off
-LogNanite=VeryVerbose off
+Global=Warning
+ProjectCJH=Log
+LogEngine=Log
+LogBlueprint=Warning
+LogPhysics=Warning
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
