--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -346,3 +346,15 @@ LogNanite=VeryVerbose off
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
+
